<resources>
    <string name="app_name">Pyro Application</string>

    <string name="welcome">Welcome!</string>
    <string name="pyro_fitness_tracker">PyRo Fitness Tracker</string>

    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="register_here">Register Here!</string>


    <string name="workout_tracker">Workout Tracker</string>calories
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>


    <string name="use_text_boxes_above_to_enter">Use Text Boxes Above to Enter</string>
    <string name="workout_information">Workout Information!</string>

    <string name="enter">Enter</string>
    <string name="register">Register</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_user_account">Create User Account</string>
    <string name="welcome_back_to_pyro" />
    <string name="register_today" />
    <string name="register_today1">Register Today!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="use_boxes_to_enter">Use Boxes to Enter</string>
    <string name="calories">Calories</string>

    <string name="button1">Button</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="view_workouts">View Workouts</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="enter_workout">Enter Workout</string>
    <string name="logout">Logout</string>
    <string name="go_back">Go Back</string>
    <string name="logout_here">Logout Here</string>
    <string name="tip_your_metabolic_window_for_protein_sythesis_can_be_up_to_2_hours">Tip! Your metabolic window for protein sythesis can be up to 2 hours!</string>
    <string name="today_s_tip_your_metabolic_window_for_protein_synthesis_can_be_up_to_2_hours">Today\'s Tip! Your metabolic window for protein synthesis can be up to 2 hours!</string>
    <string name="todo">TODO</string>

    <string name="viewimg">VIEWIMG</string>
    <string name="enterimg">ENTERIMG</string>
    <string name="home">Home</string>
    <string name="the_easy_fitness_app">The Easy Fitness App!</string>
    <string name="pyro">PyRo</string>
    <string name="mainimg">MAINIMG</string>
    <string name="ready_to_get_started">Ready to Get Started?</string>
    <string name="editimg">EDITIMG</string>
    <string name="accimg">ACCIMG</string>
    <string name="back">back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="reset_now">Reset Now!</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgotpassword">Forgot Password?</string>


</resources>