<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Enterworkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="413dp"
        android:layout_height="47dp"
        android:fontFamily="@font/bold"
        android:text="@string/pyro_fitness_tracker"
        android:textColor="#2A2D7B"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:fontFamily="@font/light"
        android:text="@string/ready_to_get_started"
        android:textColor="#2A2D7B"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/workoutTip"
        android:layout_width="280dp"
        android:layout_height="69dp"
        android:fontFamily="@font/light"
        android:text="@string/today_s_tip_your_metabolic_window_for_protein_synthesis_can_be_up_to_2_hours"
        android:textColor="#2A2D7B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/EnterWO"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:background="@drawable/button"
        android:text="@string/enter_workout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/ViewWO"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:background="@drawable/button"
        android:text="@string/view_workouts"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="159dp"
        android:layout_height="56dp"
        android:background="@drawable/text"
        android:text="@string/logout_here"
        android:textColor="#36454F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="175dp"
        android:layout_height="139dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/EnterWO"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fitness"
        android:contentDescription="@string/enterimg" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="180dp"
        android:layout_height="138dp"
        app:layout_constraintBottom_toTopOf="@+id/ViewWO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/tracker"
        android:contentDescription="@string/viewimg" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="290dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/stats" />

</androidx.constraintlayout.widget.ConstraintLayout>